// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound when not paused 1`] = `
<vime-playback-control>
  <vime-control keys="k" label="Playback" pressed="">
    <vime-icon href="#vime-pause"></vime-icon>
    <vime-tooltip position="top">
      Pause (k)
    </vime-tooltip>
  </vime-control>
</vime-playback-control>
`;

exports[`should be structurally sound when paused 1`] = `
<vime-playback-control>
  <vime-control keys="k" label="Playback">
    <vime-icon href="#vime-play"></vime-icon>
    <vime-tooltip position="top">
      Play (k)
    </vime-tooltip>
  </vime-control>
</vime-playback-control>
`;
